major update: Refactor UI components and add new features

--- a/category.html
+++ b/category.html
@@ -192,7 +192,8 @@ input, select {
 
 
 <body>
-   
+  <script src="components/uiComponents.js"></script>
+   <script src="components/authGuard.js"></script>
   <!-- Load Navbar -->
   <script src="components/navbar.js"></script>
 
