--- a/logistics.html
+++ b/logistics.html
@@ -245,6 +245,8 @@
   </style>
 </head>
 <body>
+  <script src="components/uiComponents.js"></script>
+  <script src="components/authGuard.js"></script>
   <script src="components/navbar.js"></script>
   <script src="components/sidebar.js"></script>
 
