--- a/report.html
+++ b/report.html
@@ -338,6 +338,9 @@
 </style>
 
 <body>
+  <script src="components/uiComponents.js"></script>
+  <script src="components/spinner.js"></script>
+  <script src="components/authGuard.js"></script>
   <script src="components/navbar.js"></script>
   <script src="components/sidebar.js"></script>
 
