--- a/sale.html
+++ b/sale.html
@@ -462,6 +462,12 @@
 
 
 <body>
+  <script src="components/uiComponents.js"></script>
+  <script src="components/spinner.js"></script>
+
+      <!-- Load Auth Guard -->
+  <script src="components/authGuard.js"></script>
+
   <!-- Load Navbar -->
   <script src="components/navbar.js"></script>
 
