--- a/stock-movement.html
+++ b/stock-movement.html
@@ -20,6 +20,10 @@
 </head>
 
 <body>
+  <script src="components/uiComponents.js"></script>
+  <script src="components/spinner.js"></script>
+  <!-- Load Auth Guard -->
+  <script src="components/authGuard.js"></script>
   <script src="components/navbar.js"></script>
   <script src="components/sidebar.js"></script>
 
