--- a/customer.html
+++ b/customer.html
@@ -361,6 +361,9 @@
 </head>
 
 <body>
+  <script src="components/uiComponents.js"></script>
+  <script src="components/spinner.js"></script>
+  <script src="components/authGuard.js"></script>
   <script src="components/navbar.js"></script>
   <script src="components/sidebar.js"></script>
 
