--- a/product-variant.html
+++ b/product-variant.html
@@ -192,7 +192,10 @@ input, select {
 
 
 <body>
-   
+  <script src="components/uiComponents.js"></script>
+ <script src="components/spinner.js"></script>
+  <script src="components/authGuard.js"></script>
+
   <!-- Load Navbar -->
   <script src="components/navbar.js"></script>
 
