--- a/product.html
+++ b/product.html
@@ -192,7 +192,10 @@ input, select {
 
 
 <body>
-   
+   <script src="components/uiComponents.js"></script>
+<!-- Load Auth Guard -->
+ <script src="components/spinner.js"></script>
+<script src="components/authGuard.js"></script>
   <!-- Load Navbar -->
   <script src="components/navbar.js"></script>
 
