--- a/shipping.html
+++ b/shipping.html
@@ -207,7 +207,9 @@
   </style>
 </head>
 <body>
-
+  <script src="components/uiComponents.js"></script>
+  <script src="components/spinner.js"></script>
+  <script src="components/authGuard.js"></script>
   <script src="components/navbar.js"></script>
   <script src="components/sidebar.js"></script>
 
