--- a/stats.html
+++ b/stats.html
@@ -17,6 +17,10 @@
   </head>
 
 <body>
+  <script src="components/uiComponents.js"></script>
+  <script src="components/spinner.js"></script>
+  <!-- Load Auth Guard -->
+  <script src="components/authGuard.js"></script>
   <!-- Load Navbar -->
   <script src="components/navbar.js"></script>
 
