--- a/store.html
+++ b/store.html
@@ -709,6 +709,11 @@
 
 
 <body>
+  <script src="components/uiComponents.js"></script>
+  <script src="components/spinner.js"></script>
+
+  <!-- Load Auth Guard -->
+  <script src="components/authGuard.js"></script> 
   <!-- Load Navbar -->
   <script src="components/navbar.js"></script>
 
