Save local changes before syncing with remote

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <!-- Logo Header -->
   <div class="logo-header animated delay-1">
     <img src="assets/images/eraskon_logo.webp" alt="Eraskon Logo">
-    <h1>Eraskon Inventory</h1>
+    <h1>Eraskon Inventory Management Solution</h1>
   </div>
 
   <div class="container animated delay-2">
@@ -123,7 +123,7 @@
       <div class="front">
         <img src="assets/images/erasko_gold.png" alt="">
         <div class="text">
-          <span class="text-1">Inventory <br> Management Solution</span>
+          <span class="text-1">Eraskon <br> Inventory</span>
           <span class="text-2">Ready Let's go</span>
         </div>
       </div>
